src/assets/css/style.css
/* ... */
/* Color utility classes */
.purple-color {
  color: var(--primary-color);
}
.purple-bg {
  background-color: var(--primary-color);
}
.light-white {
  color: var(--light-white);
}

/* Text list styles */
.text-list li {
  font-family: 'Avenir', sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.01em;
}

/* Letter spacing utility classes */
.letter-spacing-15 {
  letter-spacing: 0.15em;
}
.letter-spacing-1 {
  letter-spacing: 0.01em;
}

/* Media queries for responsive heading sizes */
@media (min-width: 768px) {
  .head-h1 {
    font-size: 36px;
    line-height: 44px;
  }
  .head-h2 {
    font-size: 28px;
    line-height: 36px;
  }
  .head-h3 {
    font-size: 24px;
    line-height: 32px;
  }
  .head-h4 {
    font-size: 20px;
    line-height: 32px;
  }
  .head-h5 {
    font-size: 20px;
    line-height: 28px;
  }
  .head-h6 {
    font-size: 18px;
    line-height: 26px;
  }
}

@media (min-width: 992px) {
  .head-h1 {
    font-size: 40px;
    line-height: 48px;
  }
  .head-h2 {
    font-size: 32px;
    line-height: 44px;
  }
  .head-h3 {
    font-size: 28px;
    line-height: 36px;
  }
  .head-h4 {
    font-size: 24px;
    line-height: 36px;
  }
}

/* Divider styles */
.divider {
  box-shadow: 0px 0px 19px 2px #7D2CFEF2;
  width: 100%;
  height: 3px;
  max-width: 450px;
  margin-inline: auto;
  margin-block: 40px;
  background: #FFFFFF;
  border-radius: 5px;
}

/* Banner Styling */
.banner-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  max-height: 680px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 35px 0px;
  z-index: 0;
  position: relative; /* Ensure positioning within the container */
  top: -100px; /* Adjust the value as needed to move the banner up */
  margin-bottom: -100px; /* Remove black space between sections */
}

/* JB Logo styling for relative positioning and scaling */
.banner-main .jb-logo {
  position: relative; /* Keep it within the flow of .banner-main */
  max-width: 1800px; /* Set max-width for larger screens */
  width: 100%; /* Ensure it scales correctly */
  margin: 0 auto; /* Center horizontally */
  top: -30px !important; /* Adjust the value as needed for vertical positioning */
  left: -15px !important; /* Adjust the value as needed for horizontal positioning */
}

/* Title styling within the banner */
.banner-main .title {
  position: absolute; /* Ensure this is absolute to control the exact position */
  top: 750px; /* This can be adjusted for larger screens */
  left: 50%;
  transform: translateX(-50%); /* Center horizontally */
  font-size: 26px;
  line-height: 42px;
  letter-spacing: 0.02em;
  margin: 0; /* Remove default margin */
  white-space: pre-line; /* Allow text to wrap */
  text-align: center; /* Center text alignment */
}

/* Short Title styling within the banner */
.banner-main .shortTitle {
  font-family: "AG", sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 30px;
  letter-spacing: 0.02em;
  text-align: center;
  margin: 0; /* Remove default margin */
}

/* Brand Logo styling within the banner */
.banner-main .brand-logo {
  position: absolute; /* Position the brand logo absolutely */
  top: 850px; /* Adjust the value as needed to place it below the shortTitle */
  left: 50%;
  transform: translateX(-50%); /* Center horizontally */
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 600px; /* Adjust based on your design needs */
}

.banner-main .brand-logo .image1 {
  width: 100px !important;
}

.banner-main .brand-logo .image2 {
  width: 170px;
}

/* Responsive styling for smaller screens */
@media (max-width: 767px) {
  .banner-main .title {
    top: 700px !important; /* Adjust this value for smaller screens */
    font-size: 22px; /* Adjust font size for smaller screens */
    line-height: 30px; /* Adjust line height for smaller screens */
    width: 100% !important; /* Ensure text wraps */
    white-space: normal; /* Allow text to wrap */
  }
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for smaller screens */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for smaller screens */
    font-size: 16px !important; /* Adjust font size for smaller screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 825px; /* Adjust for small screens */
    max-width: 900px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: -120px; /* Adjust for smaller screens */
  }
  .brand-logo .image2 {
    width: 120px; /* Adjust for smaller screens */
  }
  .banner-main .video-container {
    overflow: hidden !important;
  }
}

/* Responsive styling for medium screens */
@media (min-width: 768px) and (max-width: 991px) {
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for medium screens */
  }
  .banner-main .title {
    top: 700px; /* Adjust for medium screens */
    white-space: normal; /* Keep text on two lines */
    width: 90% !important; /* Ensure text wraps */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for medium screens */
    font-size: 16px !important; /* Adjust font size for medium screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 825px; /* Adjust for medium screens */
    min-width: 1000px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 150px; /* Adjust for medium screens */
  }
  .brand-logo .image2 {
    width: 150px; /* Adjust for medium screens */
  }
}
/* ... */

